--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,9 @@
-- Session CSRF tarkiste jokaiseen formiin
-- Käyttäjäsivut
-- Kategoriat maanosa/maa/alue
-- Virheellisen syötteen tapauksessa lomake olisi hyvä esitäyttää annetulla syötteellä (pois lukien salasanat), jotta käyttäjän olisi helppo lähteä korjaamaan virheellistä syötettä.
-- Kommenttien hallinta ja poisto
-- Kuvien lisäys
+- Kuvien lisäys?
+- user page joku järki spottien ja viestien listaukseen
+- front page: uusimmat spotit ja viestit?
+- Front page: esittelyteksti
 
 Tyyli:
 
-Etusivu / kirjautumissivu?
-Flash viestien formatointi
+
 Taustakuvat /static
